--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,12 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
+        <servlet-name>ServletAcceso</servlet-name>
+        <servlet-class>controlador.ServletAcceso</servlet-class>
+    </servlet>
+    <servlet>
         <servlet-name>ServletUsuario</servlet-name>
         <servlet-class>controlador.ServletUsuario</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ServletEquipo</servlet-name>
+        <servlet-class>controlador.ServletEquipo</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>ServletAcceso</servlet-name>
+        <url-pattern>/procesoAcceso</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>ServletUsuario</servlet-name>
         <url-pattern>/procesoUsuario</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ServletEquipo</servlet-name>
+        <url-pattern>/procesoEquipo</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
