--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,6 +8,10 @@
         <servlet-name>ServletUsuario</servlet-name>
         <servlet-class>controlador.ServletUsuario</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ServletEquipo</servlet-name>
+        <servlet-class>controlador.ServletEquipo</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>ServletAcceso</servlet-name>
         <url-pattern>/procesoAcceso</url-pattern>
@@ -15,6 +19,10 @@
     <servlet-mapping>
         <servlet-name>ServletUsuario</servlet-name>
         <url-pattern>/procesoUsuario</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ServletEquipo</servlet-name>
+        <url-pattern>/procesoEquipo</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
