--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -16,6 +16,14 @@
         <servlet-name>ServletJugador</servlet-name>
         <servlet-class>controlador.ServletJugador</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ServletListarAdmin</servlet-name>
+        <servlet-class>controlador.ServletListarAdmin</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ServletSession</servlet-name>
+        <servlet-class>controlador.ServletSession</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>ServletAcceso</servlet-name>
         <url-pattern>/procesoAcceso</url-pattern>
@@ -31,6 +39,14 @@
     <servlet-mapping>
         <servlet-name>ServletJugador</servlet-name>
         <url-pattern>/procesoJugador</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ServletListarAdmin</servlet-name>
+        <url-pattern>/procesoListarAdmin</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ServletSession</servlet-name>
+        <url-pattern>/procesoCerrarSession</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
